<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.AddReminder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/polis_regular"
            android:text="@string/add_new_reminder"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medicine_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medicine">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicine" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/treatment_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:background="@color/lightWhite"
                    android:elevation="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/treatment_button"
                    android:layout_marginTop="15dp"
                    android:elevation="2dp"
                    android:text="@string/Treatment"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/treatment_button"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:elevation="2dp"
                    android:text=">"
                    android:textSize="24dp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/shape"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="@color/white"
                        android:scaleType="fitCenter"
                        android:src="@drawable/medicine_shape1" />

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="@color/white"
                        android:scaleType="fitCenter"
                        android:src="@drawable/medicine_shape2" />

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="@color/white"
                        android:scaleType="fitCenter"
                        android:src="@drawable/medicine_shape3" />

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="@color/white"
                        android:scaleType="fitCenter"
                        android:src="@drawable/medicine_shape4" />

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:background="@color/white"
                        android:scaleType="fitCenter"
                        android:src="@drawable/medicine_shape5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/color"
                        android:textSize="18dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@color/colorPrimary" />

                        <Button
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="#ffff00" />

                        <Button
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="#0033cc" />

                        <Button
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="#cc3300" />

                        <Button
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="#ff99cc" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/black"
                android:text="@string/add_reminder"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>